--- a/docs/download/style2.css
+++ b/docs/download/style2.css
@@ -1,7 +1,457 @@
+select {
+	-webkit-appearance: button;
+    -webkit-border-radius: 2px;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    -webkit-padding-end: 20px;
+    -webkit-padding-start: 2px;
+    /* -webkit-user-select: none; */
+	/* background-color: #000000; */
+	/* color: white; */
+	/* text-color: #fffff; */
+	outline:0px;
+	border: none;
+	option {
+		color: #ffffff;
+	}
+}
+.u-border-4 {
+	width: auto;
+	box-shadow: 10px 5px 5px black;
+	background-color: white;
+}
+.u-border-4:hover {
+	transform: scale(1.05);
+}
+.snowflake {
+	 --size: 1vw;
+	 width: var(--size);
+	 height: var(--size);
+	 background: white;
+	 border-radius: 50%;
+	 position: absolute;
+	 top: -5vh;
+}
+ @keyframes snowfall {
+	 0% {
+		 transform: translate3d(var(--left-ini), 0, 0);
+	}
+	 100% {
+		 transform: translate3d(var(--left-end), 110vh, 0);
+	}
+}
+ .snowflake:nth-child(1) {
+	 --size: 1vw;
+	 --left-ini: -9vw;
+	 --left-end: 2vw;
+	 left: 17vw;
+	 animation: snowfall 11s linear infinite;
+	 animation-delay: -9s;
+}
+ .snowflake:nth-child(2) {
+	 --size: 0.6vw;
+	 --left-ini: -8vw;
+	 --left-end: 3vw;
+	 left: 44vw;
+	 animation: snowfall 13s linear infinite;
+	 animation-delay: -3s;
+}
+ .snowflake:nth-child(3) {
+	 --size: 0.6vw;
+	 --left-ini: -1vw;
+	 --left-end: -4vw;
+	 left: 18vw;
+	 animation: snowfall 14s linear infinite;
+	 animation-delay: -2s;
+}
+ .snowflake:nth-child(4) {
+	 --size: 0.6vw;
+	 --left-ini: 9vw;
+	 --left-end: -1vw;
+	 left: 22vw;
+	 animation: snowfall 14s linear infinite;
+	 animation-delay: -8s;
+}
+ .snowflake:nth-child(5) {
+	 --size: 0.4vw;
+	 --left-ini: -6vw;
+	 --left-end: -7vw;
+	 left: 48vw;
+	 animation: snowfall 15s linear infinite;
+	 animation-delay: -9s;
+}
+ .snowflake:nth-child(6) {
+	 --size: 0.8vw;
+	 --left-ini: -6vw;
+	 --left-end: 6vw;
+	 left: 26vw;
+	 animation: snowfall 12s linear infinite;
+	 animation-delay: -3s;
+}
+ .snowflake:nth-child(7) {
+	 --size: 0.6vw;
+	 --left-ini: -2vw;
+	 --left-end: 5vw;
+	 left: 96vw;
+	 animation: snowfall 15s linear infinite;
+	 animation-delay: -5s;
+}
+ .snowflake:nth-child(8) {
+	 --size: 0.6vw;
+	 --left-ini: -9vw;
+	 --left-end: -1vw;
+	 left: 76vw;
+	 animation: snowfall 14s linear infinite;
+	 animation-delay: -2s;
+}
+ .snowflake:nth-child(9) {
+	 --size: 0.4vw;
+	 --left-ini: -3vw;
+	 --left-end: 1vw;
+	 left: 34vw;
+	 animation: snowfall 15s linear infinite;
+	 animation-delay: -4s;
+}
+ .snowflake:nth-child(10) {
+	 --size: 0.6vw;
+	 --left-ini: 3vw;
+	 --left-end: -8vw;
+	 left: 4vw;
+	 animation: snowfall 8s linear infinite;
+	 animation-delay: -7s;
+}
+ .snowflake:nth-child(11) {
+	 --size: 0.4vw;
+	 --left-ini: -1vw;
+	 --left-end: -5vw;
+	 left: 26vw;
+	 animation: snowfall 9s linear infinite;
+	 animation-delay: -9s;
+}
+ .snowflake:nth-child(12) {
+	 --size: 1vw;
+	 --left-ini: -6vw;
+	 --left-end: 2vw;
+	 left: 29vw;
+	 animation: snowfall 13s linear infinite;
+	 animation-delay: -5s;
+}
+ .snowflake:nth-child(13) {
+	 --size: 0.4vw;
+	 --left-ini: -4vw;
+	 --left-end: 6vw;
+	 left: 57vw;
+	 animation: snowfall 8s linear infinite;
+	 animation-delay: -10s;
+}
+ .snowflake:nth-child(14) {
+	 --size: 0.8vw;
+	 --left-ini: -3vw;
+	 --left-end: -3vw;
+	 left: 29vw;
+	 animation: snowfall 15s linear infinite;
+	 animation-delay: -3s;
+}
+ .snowflake:nth-child(15) {
+	 --size: 1vw;
+	 --left-ini: -7vw;
+	 --left-end: -4vw;
+	 left: 8vw;
+	 animation: snowfall 12s linear infinite;
+	 animation-delay: -4s;
+}
+ .snowflake:nth-child(16) {
+	 --size: 1vw;
+	 --left-ini: 3vw;
+	 --left-end: 7vw;
+	 left: 60vw;
+	 animation: snowfall 9s linear infinite;
+	 animation-delay: -10s;
+}
+ .snowflake:nth-child(17) {
+	 --size: 0.2vw;
+	 --left-ini: -8vw;
+	 --left-end: -7vw;
+	 left: 5vw;
+	 animation: snowfall 7s linear infinite;
+	 animation-delay: -9s;
+}
+ .snowflake:nth-child(18) {
+	 --size: 0.4vw;
+	 --left-ini: 10vw;
+	 --left-end: 1vw;
+	 left: 31vw;
+	 animation: snowfall 7s linear infinite;
+	 animation-delay: -4s;
+}
+ .snowflake:nth-child(19) {
+	 --size: 0.2vw;
+	 --left-ini: 8vw;
+	 --left-end: 1vw;
+	 left: 98vw;
+	 animation: snowfall 9s linear infinite;
+	 animation-delay: -1s;
+}
+ .snowflake:nth-child(20) {
+	 --size: 1vw;
+	 --left-ini: 6vw;
+	 --left-end: -4vw;
+	 left: 2vw;
+	 animation: snowfall 8s linear infinite;
+	 animation-delay: -8s;
+}
+ .snowflake:nth-child(21) {
+	 --size: 0.6vw;
+	 --left-ini: -4vw;
+	 --left-end: -8vw;
+	 left: 50vw;
+	 animation: snowfall 9s linear infinite;
+	 animation-delay: -9s;
+}
+ .snowflake:nth-child(22) {
+	 --size: 0.2vw;
+	 --left-ini: 2vw;
+	 --left-end: -1vw;
+	 left: 89vw;
+	 animation: snowfall 8s linear infinite;
+	 animation-delay: -3s;
+}
+ .snowflake:nth-child(23) {
+	 --size: 0.2vw;
+	 --left-ini: -2vw;
+	 --left-end: 5vw;
+	 left: 9vw;
+	 animation: snowfall 13s linear infinite;
+	 animation-delay: -3s;
+}
+ .snowflake:nth-child(24) {
+	 --size: 1vw;
+	 --left-ini: -3vw;
+	 --left-end: 8vw;
+	 left: 82vw;
+	 animation: snowfall 14s linear infinite;
+	 animation-delay: -6s;
+}
+ .snowflake:nth-child(25) {
+	 --size: 0.4vw;
+	 --left-ini: 2vw;
+	 --left-end: 2vw;
+	 left: 21vw;
+	 animation: snowfall 13s linear infinite;
+	 animation-delay: -5s;
+}
+ .snowflake:nth-child(26) {
+	 --size: 0.8vw;
+	 --left-ini: -2vw;
+	 --left-end: 5vw;
+	 left: 52vw;
+	 animation: snowfall 6s linear infinite;
+	 animation-delay: -9s;
+}
+ .snowflake:nth-child(27) {
+	 --size: 1vw;
+	 --left-ini: -5vw;
+	 --left-end: 5vw;
+	 left: 58vw;
+	 animation: snowfall 9s linear infinite;
+	 animation-delay: -4s;
+}
+ .snowflake:nth-child(28) {
+	 --size: 0.8vw;
+	 --left-ini: 10vw;
+	 --left-end: 4vw;
+	 left: 84vw;
+	 animation: snowfall 6s linear infinite;
+	 animation-delay: -6s;
+}
+ .snowflake:nth-child(29) {
+	 --size: 0.4vw;
+	 --left-ini: -5vw;
+	 --left-end: -4vw;
+	 left: 4vw;
+	 animation: snowfall 6s linear infinite;
+	 animation-delay: -2s;
+}
+ .snowflake:nth-child(30) {
+	 --size: 0.4vw;
+	 --left-ini: 8vw;
+	 --left-end: 3vw;
+	 left: 46vw;
+	 animation: snowfall 10s linear infinite;
+	 animation-delay: -5s;
+}
+ .snowflake:nth-child(31) {
+	 --size: 0.8vw;
+	 --left-ini: 1vw;
+	 --left-end: 2vw;
+	 left: 11vw;
+	 animation: snowfall 6s linear infinite;
+	 animation-delay: -5s;
+}
+ .snowflake:nth-child(32) {
+	 --size: 0.4vw;
+	 --left-ini: 3vw;
+	 --left-end: -1vw;
+	 left: 81vw;
+	 animation: snowfall 15s linear infinite;
+	 animation-delay: -8s;
+}
+ .snowflake:nth-child(33) {
+	 --size: 1vw;
+	 --left-ini: 4vw;
+	 --left-end: 9vw;
+	 left: 62vw;
+	 animation: snowfall 15s linear infinite;
+	 animation-delay: -4s;
+}
+ .snowflake:nth-child(34) {
+	 --size: 0.4vw;
+	 --left-ini: -1vw;
+	 --left-end: 3vw;
+	 left: 54vw;
+	 animation: snowfall 8s linear infinite;
+	 animation-delay: -4s;
+}
+ .snowflake:nth-child(35) {
+	 --size: 0.8vw;
+	 --left-ini: -2vw;
+	 --left-end: -7vw;
+	 left: 69vw;
+	 animation: snowfall 13s linear infinite;
+	 animation-delay: -7s;
+}
+ .snowflake:nth-child(36) {
+	 --size: 0.4vw;
+	 --left-ini: -8vw;
+	 --left-end: -3vw;
+	 left: 24vw;
+	 animation: snowfall 8s linear infinite;
+	 animation-delay: -10s;
+}
+ .snowflake:nth-child(37) {
+	 --size: 1vw;
+	 --left-ini: -6vw;
+	 --left-end: -2vw;
+	 left: 57vw;
+	 animation: snowfall 10s linear infinite;
+	 animation-delay: -2s;
+}
+ .snowflake:nth-child(38) {
+	 --size: 1vw;
+	 --left-ini: 10vw;
+	 --left-end: -1vw;
+	 left: 7vw;
+	 animation: snowfall 7s linear infinite;
+	 animation-delay: -8s;
+}
+ .snowflake:nth-child(39) {
+	 --size: 0.4vw;
+	 --left-ini: 4vw;
+	 --left-end: 5vw;
+	 left: 37vw;
+	 animation: snowfall 8s linear infinite;
+	 animation-delay: -9s;
+}
+ .snowflake:nth-child(40) {
+	 --size: 1vw;
+	 --left-ini: 7vw;
+	 --left-end: -2vw;
+	 left: 86vw;
+	 animation: snowfall 12s linear infinite;
+	 animation-delay: -10s;
+}
+ .snowflake:nth-child(41) {
+	 --size: 1vw;
+	 --left-ini: -1vw;
+	 --left-end: -1vw;
+	 left: 66vw;
+	 animation: snowfall 12s linear infinite;
+	 animation-delay: -6s;
+}
+ .snowflake:nth-child(42) {
+	 --size: 1vw;
+	 --left-ini: 7vw;
+	 --left-end: 6vw;
+	 left: 9vw;
+	 animation: snowfall 14s linear infinite;
+	 animation-delay: -2s;
+}
+ .snowflake:nth-child(43) {
+	 --size: 0.8vw;
+	 --left-ini: -7vw;
+	 --left-end: 0vw;
+	 left: 57vw;
+	 animation: snowfall 14s linear infinite;
+	 animation-delay: -10s;
+}
+ .snowflake:nth-child(44) {
+	 --size: 0.6vw;
+	 --left-ini: -1vw;
+	 --left-end: -6vw;
+	 left: 71vw;
+	 animation: snowfall 14s linear infinite;
+	 animation-delay: -10s;
+}
+ .snowflake:nth-child(45) {
+	 --size: 1vw;
+	 --left-ini: -4vw;
+	 --left-end: 2vw;
+	 left: 13vw;
+	 animation: snowfall 13s linear infinite;
+	 animation-delay: -3s;
+}
+ .snowflake:nth-child(46) {
+	 --size: 0.2vw;
+	 --left-ini: 4vw;
+	 --left-end: 10vw;
+	 left: 21vw;
+	 animation: snowfall 11s linear infinite;
+	 animation-delay: -1s;
+}
+ .snowflake:nth-child(47) {
+	 --size: 0.6vw;
+	 --left-ini: -8vw;
+	 --left-end: 6vw;
+	 left: 61vw;
+	 animation: snowfall 15s linear infinite;
+	 animation-delay: -7s;
+}
+ .snowflake:nth-child(48) {
+	 --size: 0.8vw;
+	 --left-ini: 5vw;
+	 --left-end: 8vw;
+	 left: 84vw;
+	 animation: snowfall 11s linear infinite;
+	 animation-delay: -9s;
+}
+ .snowflake:nth-child(49) {
+	 --size: 0.4vw;
+	 --left-ini: -4vw;
+	 --left-end: -1vw;
+	 left: 75vw;
+	 animation: snowfall 6s linear infinite;
+	 animation-delay: -6s;
+}
+ .snowflake:nth-child(50) {
+	 --size: 1vw;
+	 --left-ini: -9vw;
+	 --left-end: -8vw;
+	 left: 90vw;
+	 animation: snowfall 13s linear infinite;
+	 animation-delay: -2s;
+}
+/* added small blur every 6 snowflakes*/
+ .snowflake:nth-child(6n) {
+	 filter: blur(1px);
+}
+
+/* added small blur every 6 snowflakes*/
+.snowflake:nth-child(6n) {
+  filter: blur(1px);
+}
 body {
     width: 100%;
     height: 100%;
-    background-image: url(assets/images/bg.gif);
+    /* background-image: url(assets/images/bg.gif); */
     background-position: center;
     background-size: cover;
     background-position: top;
@@ -1665,6 +2115,13 @@ a {
   .u-form-vertical .u-form-group {
     width: 100%;
   }
+  .image {
+	display: none;
+  }
+  .body {
+	overflow-y: scroll;
+	overflow-x: hidden;
+  }
 }
 .u-label-left {
   display: flex;
@@ -1968,6 +2425,13 @@ a {
   margin-bottom: 0 !important;
 }
 @media (max-width: 767px) {
+  .image {
+	display: none;
+  }
+  .body {
+	overflow-y: scroll;
+	overflow-x: hidden;
+  }
   .u-form-horizontal {
     flex-direction: column;
     align-items: stretch;
@@ -2066,7 +2530,7 @@ html {
 body {
   height: 100%;
   min-height: 100%;
-  background-image: url(assets/images/bg.gif);
+  /* background-image: url(assets/images/bg.gif); */
   background-position: center;
   background-size: cover;
   background-position: top;
@@ -15703,7 +16167,7 @@ html {
 .u-body {
 	width: 100%;
     height: 100%;
-    background-image: url(assets/images/bg.gif);
+    /* background-image: url(assets/images/bg.gif); */
     background-position: center;
     background-size: cover;
     background-position: top;
@@ -16364,7 +16828,7 @@ img.u-opacity-0,
 .u-black.u-body {
 	width: 100%;
     height: 100%;
-    background-image: url(assets/images/bg.gif);
+    /* background-image: url(assets/images/bg.gif); */
     background-position: center;
     background-size: cover;
     background-position: top;
